fixed expanded/collapsed icon in topics accordion

--- a/www/styles/app.css
+++ b/www/styles/app.css
@@ -547,7 +547,7 @@ xx.webgis-button {
 	display: inline-block;
 }
 
-.topics .list-item-title.expanded::before {
+.topics .expanded .list-item-title::before {
 	content: "\f106";
 }
 
